[gd_scene load_steps=3 format=3 uid="uid://dhmj5fy61v608"]

[ext_resource type="Script" path="res://Scenes/Lobby/PeerView.gd" id="1_hqru8"]
[ext_resource type="Theme" uid="uid://ixv6thuip0t" path="res://Graphics/Themes/deleteTheme.tres" id="2_vyrjh"]

[node name="PeerView" type="Node2D"]
script = ExtResource("1_hqru8")

[node name="HostName" type="Label" parent="."]
offset_left = 514.0
offset_top = 20.0
offset_right = 614.0
offset_bottom = 43.0
text = "Joined a host"

[node name="nameField" type="LineEdit" parent="."]
offset_left = 13.0
offset_top = 596.0
offset_right = 311.0
offset_bottom = 627.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 23.0
offset_top = 90.0
offset_right = 305.0
offset_bottom = 582.0
color = Color(0, 0, 0, 0.298039)

[node name="PeerList" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 17.0
offset_top = 12.0
offset_right = 272.0
offset_bottom = 549.0

[node name="ReadyButton" type="Button" parent="."]
offset_left = 942.0
offset_top = 590.0
offset_right = 1126.0
offset_bottom = 627.0
text = "Ready?"

[node name="ExitButton" type="Button" parent="."]
offset_left = 24.0
offset_top = 23.0
offset_right = 208.0
offset_bottom = 60.0
theme = ExtResource("2_vyrjh")
text = "Exit"

[connection signal="text_submitted" from="nameField" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="ReadyButton" to="." method="_on_ready_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
